--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ionicons": "^3.0.0",
     "primeng": "^5.0.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
